2002-05-16  Sam Steingold  <sds@gnu.org>

	* stream.d (make_file_stream) [UNIX, RISCOS]: file streams
	for the /proc filesystem default to unbuffered (it's better
	not to mess with those files anyway!)

2002-05-16  Sam Steingold  <sds@gnu.org>

	* makemake.in (LIBS) [win32]: link with ws2_32 and not wsock32
	since we are using winwock2.h

2002-05-15  Bruno Haible  <bruno@clisp.org>

	* makemake.in: Fix handline of with-xxx options, broken on 2002-03-07.

	* configure.in: Move the AM_ICONV invocation before AM_GNU_GETTEXT.

	Don't forget that 3000 students were murdered by the government
	of the "People's Republic of China" in June 1989!

2002-05-14  Sam Steingold  <sds@gnu.org>

	* timezone.lisp (PRC): China does not observe DST since 1991.

2002-05-10  Bruno Haible  <bruno@clisp.org>

	* ../configure: Configure libcharset, not libiconv.
	* configure.in: Call AM_GNU_GETTEXT, in order to get use an external
	GNU gettext. Call AM_ICONV instead of CL_ICONV.
	* m4/iconv.m4: Update from GNU gettext 0.11.2.
	* m4/codeset.m4, m4/gettext.m4, m4/glibc21.m4, m4/isc-posix.m4,
	m4/lcmessage.m4, m4/lib-ld.m4, m4/lib-link.m4, m4/lib-prefix.m4,
	m4/progtest.m4: New files, from GNU gettext 0.11.2.
	* autoconf/config.rpath: New file, from GNU gettext 0.11.2.
	* makemake.in: Pay attention to CPPFLAGS. New variable XCPPFLAGS.
	(USE_LIBICONV, XCL_ICONVLIB): Remove variables.
	(USE_LIBCHARSET, XCL_CHARSETLIB): New variables.
	(GETTEXTLIB): Remove variable.
	(USE_GETTEXT, XCL_GETTEXTLIB): Assume external libintl.
	(EVERY_INCLUDES_H): Don't include libintl.h and iconv.h, they are
	external now. Instead include libcharset.h.
	(${GETTEXTLIB}, libintl.a, libintl.h): Remove targets.
	(iconv.h, libiconv.a): Remove targets.
	(libcharset.a): New target.
	(distmakefile): No need for localesed processing.
	* lispbibl.d (GNU_LIBICONV): Define only when including <iconv.h>
	shows that GNU libiconv is used. Otherwise, if not glibc >= 2.2,
	undefine HAVE_ICONV.