@@ -1,3 +1,9 @@
+2002-05-17  Bruno Haible  <bruno@clisp.org>
+
+	* stdbool.h.in: Upgrade to gettext-0.11.3.
+	* m4/stdbool.m4: Upgrade to gettext-0.11.3.
+	* configure.in: Use gt_STDBOOL_H instead of CL_STDBOOL_H.
+
 2002-05-16  Sam Steingold  <sds@gnu.org>
 
 	* stream.d (make_file_stream) [UNIX, RISCOS]: file streams
